# ros2_intelligent_automation

./: README.md
industrial_robots/: CMakeLists.txt  package.xml
industrial_robots/config/: kinematics.yaml  panda_ros_controllers.yaml
industrial_robots/launch/: panda_moveit.launch.py  panda_simulation.launch.py
industrial_robots/srdf/: group_definition.xacro  hand.xacro  panda_arm.srdf.xacro  panda_arm.xacro
industrial_robots/urdf/: hand.xacro  panda_arm.urdf.xacro  panda_arm.xacro
